<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
   <Chronometer  
		android:id ="@+id/chronometer"  
		android:layout_width="wrap_content"  
		android:layout_height="wrap_content"  
		android:format="%s"  
		android:textSize="0px"  
		android:textColor="#00FF00"  
		/>  
	<RelativeLayout android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:id="@+id/titlebackground"
		android:background="#440000ff">
    <Button
	    android:id="@+id/ipbutton"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/set"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
    <Button
	    android:id="@+id/linkbutton"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@id/ipbutton"
	    android:text="@string/link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
    <Button
	    android:id="@+id/shifbutton"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:text="@string/recipe"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
    <Button
	    android:id="@+id/sortbutton"
	    android:layout_alignParentTop="true"
	    android:layout_toLeftOf="@id/shifbutton"
	    android:text="@string/sort"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40px"
        android:text="@string/app_title"
        android:background="#00000000"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/sortbutton"
        android:layout_toRightOf="@id/linkbutton"       
	     />
    </RelativeLayout>
    <RelativeLayout 
		android:layout_width="fill_parent" 
		android:id="@+id/firstlist"
		android:layout_height="wrap_content"
		 android:layout_below="@id/titlebackground" >
    <ListView    
    android:id="@+id/listup"   
    android:layout_width="fill_parent"     
    android:layout_height="600dp"  
    ></ListView>
    </RelativeLayout>
    <RelativeLayout 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		 android:layout_below="@id/firstlist" >
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40px"
        android:text="@string/app_title2"
        android:background="#440000ff"     
        android:id="@+id/titlebackground2"
	     />
        <Button
	    android:id="@+id/deletebutton"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:text="@string/delete"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
        <Button
	    android:id="@+id/fullgetbutton"
	    android:layout_alignParentTop="true"
	    android:layout_toLeftOf="@id/deletebutton"
	    android:text="@string/fullget"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
    <ListView    
    android:id="@+id/listdown"   
    android:layout_width="fill_parent"     
    android:layout_height="fill_parent"     
    android:layout_below="@id/titlebackground2"  
    ></ListView>
    </RelativeLayout>
</RelativeLayout>
