<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/listbackgroud">
	<LinearLayout android:orientation="vertical"
		android:layout_width="100dp" 
		android:layout_height="wrap_content"
		>

		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/table_id" 
			android:textColor="#330000FF"
			android:textSize="30px" />
		<TextView android:id="@+id/table_id" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FF000000"
			android:textSize="50px" />

	</LinearLayout>
	<LinearLayout android:orientation="vertical"
		android:layout_width="200dp"  
		android:layout_height="wrap_content"
		android:layout_weight="1">

		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/dish_name" 
			android:textColor="#330000FF"
			android:textSize="30px" />
		<TextView android:id="@+id/dish_name" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FF000000"
			android:textSize="50px" />

	</LinearLayout>

	
	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_weight="1">

		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/dish_num" 
			android:textColor="#330000FF"
			android:textSize="30px" />
		<TextView android:id="@+id/dish_num" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#ff000000"
			android:textSize="50px" />

	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_weight="1">
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/dish_state" 
			android:textColor="#330000FF"
			android:textSize="30px" />
		<TextView android:id="@+id/dish_state_show" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FF000000"
			android:textSize="50px" />
		
		
	</LinearLayout>
	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_weight="1">
	<TextView android:id="@+id/showtimer" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:textColor="#ff00ee00"
			android:textSize="30px"
			android:gravity="center"
			android:layout_gravity="center" />
		<ProgressBar 
        android:id="@+id/psb"  
        style="?android:attr/progressBarStyleLarge"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content" 
        android:layout_gravity="center" 
        />
		<CheckBox 
         android:id="@+id/selected" 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:button="@drawable/checkstyle"
          android:layout_gravity="center"
          />  		
	</LinearLayout>
</LinearLayout>
